syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "organization.proto";

package profile;

option csharp_namespace = "JB.gRPC.Profile";

service ProfileRPC {
  rpc Get (ProfileRequest) returns (ProfileResponse);
}

message ProfileRequest {
	repeated int32 id = 1;
}

message ProfileResponse {
	repeated Profile profiles = 1;
}


message Profile {
	int32 id = 1;
	string name = 2;
	int32 roleId = 3;
	string avatarUrl = 4;
	google.protobuf.Int32Value organizationId = 5;
	organization.Organization organization = 6;
	google.protobuf.Int32Value defaultCVId = 7;
	string phoneNumber = 8;
	bool emailConfirmed = 9;
	string email = 10;
	string userName = 11;
	google.protobuf.Timestamp createdDate = 12;
	google.protobuf.Timestamp updatedDate = 13;
	string address = 14;
	string city = 15;
	string country = 16;
	string introduction = 17;
	string website = 18;
	string gender = 19;
	google.protobuf.Timestamp birthdate = 20;
	string phone = 21;
	string github = 22;
	string reference = 23;
	repeated string activities = 24;
	repeated string certifications = 25;
	repeated string awards = 26;
	repeated UserSkill skills = 27;
	repeated UserEducation educations = 28;
	repeated UserExperience experiences = 29;
	int32 views = 30;
}

message UserSkill {
	string skillName = 1;
	int32 level = 2;
}

message UserEducation {
	string school = 1;
	string major = 2;
	string status = 3;
	string profession = 4;
}

message UserExperience {
	string company = 1;
	string position = 2;
	string duration = 3;
}